# wealth-distribution

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Home.py  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml
.github/workflows/: ci.yml
app_pages/: __init__.py  age_slicing.py  home.py  methodology.py
content/home/: data_basis.md  definitions.md  distribution_context.md  intro.md  limitations.md  normative_argument.md
content/methodology/: data_basis.md  double_count_protection.md  inheritance_conservation.md  limitations.md  reproduction.md  research_question.md  scope_and_ranking.md
data/: sources.json
data/processed/: README.md
data/raw/: README.md
data/reference/: fed_z1_defined_benefit_2022.csv  ssa_period_life_2019_tr2022.csv  ssa_period_life_2019_tr2022.csv.source.txt
docs/: methodology.md
docs/plans/: 2026-07-04-total-country-distribution.md  (+21 more)
pages/: 02_Wealth_by_Quantile.py  03_Wealth_by_Age.py  04_Age_Quantile_Matrix.py  05_Assumptions_Lab.py  06_Source_Data.py  07_Methodology.py  08_Age_Distribution_Shift.py
scripts/: extract_ssa_life_table.py  reproduce_report.py
src/: __init__.py  acs_loader.py  actuarial.py  app_data.py  charts.py  config.py  cps_loader.py  data_sources.py  fed_dfa.py  formatting.py  human_capital.py  income_security.py  inheritance.py  pensions.py  provenance.py  real_data.py  reconciliation.py  reporting.py  sample_data.py  scf_detailed.py  scf_loader.py  scf_uncertainty.py  social_security.py  source_manifest.py  ssa_loader.py  ui.py  validation.py  weighted_stats.py
tests/: conftest.py  test_actuarial.py  test_charts.py  test_data_schema.py  test_human_capital.py  test_income_security.py  test_inheritance.py  test_methodology_page.py  test_package_layout.py  test_pensions.py  test_provenance.py  test_real_data.py  test_reconciliation.py  test_release_metadata.py  test_reporting.py  test_reproduce_report.py  test_scf_detailed.py  test_scf_uncertainty.py  test_social_security.py  test_source_manifest.py  test_ssa_loader.py  test_streamlit_app.py  test_weighted_stats.py
wealth_report/: __init__.py
(+54 files in other folders)
