[project]
name = "wealth-report"
version = "0.2.0"
description = "Interactive Streamlit report comparing conventional net worth with modeled comprehensive household resources."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Sergey Zelvenskiy" }]
dependencies = [
    "numpy",
    "pandas",
    "plotly",
    "pyarrow",
    "requests",
    "scipy",
    "statsmodels",
    "streamlit",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[project.urls]
Repository = "https://github.com/actions-im/wealth-distribution"
