[project]
name = "wealth-report"
version = "0.3.0"
description = "Interactive Streamlit report comparing conventional net worth with modeled comprehensive household resources."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Sergey Zelvenskiy" }]
dependencies = [
    "numpy",
    "pandas",
    "plotly",
    "pyarrow",
    "requests",
    "scipy",
    "statsmodels",
    "streamlit",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff==0.16.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[project.urls]
Repository = "https://github.com/actions-im/wealth-distribution"
